# standard-benchmark

./: .travis.yml  Cargo.toml  README.md  build.rs
master/: aliases.js  search-index.js  settings.html  source-files.js
master/aho_corasick/: enum.ErrorKind.html  enum.MatchKind.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.Error.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Match.html  struct.StreamFindIter.html
master/ansi_term/: enum.Color.html  enum.Colour.html  struct.ANSIGenericString.html  struct.ANSIGenericStrings.html  struct.Infix.html  struct.Prefix.html  struct.Style.html  struct.Suffix.html
master/atty/: enum.Stream.html
master/boolinator/: all.html  index.html  trait.Boolinator.html
master/chrono/: enum.SecondsFormat.html  enum.Weekday.html  struct.Date.html  struct.DateTime.html  struct.Duration.html  struct.ParseWeekdayError.html
master/clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  enum.Shell.html  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html
master/curl_sys/: enum.CURL.html  enum.CURLM.html  enum.CURLSH.html  enum.curl_httppost.html  struct.CURLMsg.html  struct.curl_certinfo.html  struct.curl_fileinfo.html  struct.curl_forms.html  struct.curl_slist.html  struct.curl_sockaddr.html  struct.curl_version_info_data.html  struct.curl_waitfd.html  struct.fd_set.html
master/experiment/: all.html  enum.OverwritePolicy.html  enum.Verbosity.html  fn.force_if.html  fn.safe_mkdir.html  fn.verbose_if.html  index.html  (+3 more)
src/: build.rs  config.rs  error.rs  executor.rs  lib.rs  main.rs  run.rs  source.rs  tests.rs
(+1366 files in other folders)
