[package]
name = "standard-benchmark"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"

[lib]
name = "stdbench"

[dependencies]
clap = "2.24"
log = "0.4"
stderrlog = "0.4"
yaml-rust = "0.4"
glob = "0.3"
tempdir = "0.3"
downcast-rs = "1.0"
boolinator = "2.4.0"
failure = "0.1"
strum = "0.15.0"
strum_macros = "0.15.0"
regex = "1"
lazy_static = "1.3.0"
os_pipe = "0.8"
