[package]
name = "standard-benchmark"
version = "0.1.0"
authors = ["Michal Siedlaczek <michal.siedlaczek@nyu.edu>"]
edition = "2018"
build = "build.rs"

[lib]
name = "stdbench"
path = "src/lib.rs"

[dependencies]
clap = "2.24"
log = "0.4"
flexi_logger = "0.14"
glob = "0.3"
tempdir = "0.3"
boolinator = "2.4.0"
failure = "0.1"
strum = "0.15.0"
strum_macros = "0.15.0"
regex = "1"
lazy_static = "1.3.0"
os_pipe = "0.8"
itertools = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
url = "2.1"
url_serde = "0.2"
git2 = "0.10"

[build-dependencies]
cc = "1.0"
git2 = "0.10"
tempdir = "0.3"
